test/expected/explain_fsf_v.out
explain friend static void f()
                           ^
28: error: "friend static" is illegal for function
